--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/proyecto_asistencia
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-9.4.0.jar=C:\\Users\\chris\\Desktop\\IESTP VILLA MARIA\\IV SEMESTRE\\TALLER DE PROGRAMACI\u00d3N CONCURRENTE\\Farmacia\\Conector\\mysql-connector-j-9.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-j-9.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
